fix for rover selector naming issue and centering for full screen view of images on mobile

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -515,6 +515,7 @@ html{
 
 .image_viewer_ctn{
     width: 100%;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -524,10 +525,6 @@ html{
     max-width: 100%;
     min-width: 50%;
     max-height: 80vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 20vh;
 }
 
 .pop_up_div{
